# storyteller

./: .clippy.toml  .env.example  .gitattributes  .gitignore  AGENTS.md  Brewfile  CLA.md  CLAUDE.md  Cargo.toml  LICENSE-TRANSITION-GUIDE.md  LICENSING.md  Makefile.toml  README.md
crates/storyteller/: Cargo.toml
crates/storyteller-api/: Cargo.toml  build.rs
crates/storyteller-api/src/: lib.rs  proto.rs  server.rs  state.rs
crates/storyteller-api/src/engine/: state_manager.rs  types.rs
crates/storyteller-api/src/grpc/: composer_service.rs  engine_service.rs  mod.rs
crates/storyteller-api/src/middleware/: auth.rs
crates/storyteller-api/src/persistence/: events.rs  session_store.rs  turns.rs
crates/storyteller-api/src/routes/: session.rs
crates/storyteller-api/tests/: grpc_integration.rs
crates/storyteller-cli/: Cargo.toml  Makefile.toml
crates/storyteller-cli/src/: compose.rs  composer_cache.rs  main.rs  player_simulation.rs  playtest.rs
crates/storyteller-client/: Cargo.toml  build.rs
crates/storyteller-client/src/: CLAUDE.md  client.rs  lib.rs
crates/storyteller-client/tests/: client_integration.rs
crates/storyteller-composer/: Cargo.toml
crates/storyteller-composer/src/: catalog.rs  compose.rs  descriptors.rs  goals.rs  lib.rs  likeness.rs  names.rs
crates/storyteller-server/: Cargo.toml  build.rs
crates/storyteller-server/src/: lib.rs  logging.rs  proto.rs  server.rs  state.rs
crates/storyteller-server/src/engine/: mod.rs  providers.rs  state_manager.rs  types.rs
crates/storyteller-server/src/grpc/: CLAUDE.md  composer_service.rs  engine_service.rs  mod.rs
crates/storyteller-server/src/middleware/: auth.rs  mod.rs
crates/storyteller-server/src/persistence/: CLAUDE.md  composition.rs  directives.rs  events.rs  (+3 more)
crates/storyteller-server/tests/: grpc_integration.rs
crates/storyteller-storykeeper/: Cargo.toml
crates/storyteller-storykeeper/migrations/: 20260211000002_create_stories.sql  20260211000005_create_scenes.sql  20260211000007_create_entities.sql  20260211000009_create_scene_instances.sql  20260211000012_create_event_ledger.sql  20260211000013_create_scene_transitions.sql  20260323000001_create_bedrock_schema.sql  20260323000001_create_ground_state_schema.sql  20260323000002_create_bedrock_primitive_tables.sql  20260323000002_create_ground_state_primitive_tables.sql  20260323000003_create_bedrock_query_functions.sql  20260323000003_create_ground_state_query_functions.sql  20260325000001_create_bedrock_dimension_values.sql
crates/storyteller-storykeeper/src/: in_memory.rs  lib.rs
crates/storyteller-storykeeper/tests/: bedrock_integration.rs
crates/storyteller-workshop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/storyteller/src/: lib.rs
storyteller-cli/: Cargo.toml
storyteller-cli/src/: main.rs
storyteller-core/: Cargo.toml
storyteller-core/src/: CLAUDE.md  config.rs  errors.rs  lib.rs
storyteller-core/src/config/: merge.rs  mod.rs
storyteller-core/src/database/: checkpoint.rs  mod.rs
storyteller-core/src/graph/: mod.rs  narrative.rs
storyteller-core/src/promotion/: resolution.rs  weight.rs
storyteller-core/src/traits/: CLAUDE.md  emotional_grammar.rs  llm.rs  mod.rs  phase_observer.rs
storyteller-core/src/types/: CLAUDE.md  character.rs  entity.rs  event.rs  event_grammar.rs  message.rs  mod.rs  prediction.rs  resolver.rs  scene.rs  tensor.rs
storyteller-engine/: Cargo.toml
storyteller-engine/src/: CLAUDE.md  lib.rs  plugin.rs
storyteller-engine/src/agents/: CLAUDE.md  character.rs  classifier.rs  mod.rs  narrator.rs  reconciler.rs  storykeeper.rs
storyteller-engine/src/components/: communicability.rs  identity.rs  mod.rs  persistence.rs  turn.rs
storyteller-engine/src/context/: journal.rs  mod.rs  preamble.rs  prediction.rs  retrieval.rs
storyteller-engine/src/inference/: cloud.rs  event_classifier.rs  external.rs  frame.rs  mod.rs
storyteller-engine/src/messaging/: mod.rs  tasker.rs
storyteller-engine/src/systems/: CLAUDE.md  entity_lifecycle.rs  event_pipeline.rs  mod.rs  observability.rs  rendering.rs  turn_cycle.rs
storyteller-engine/src/workshop/: the_flute_kept.rs
storyteller-ml/: CLAUDE.md  Cargo.toml
storyteller-ml/src/: feature_schema.rs  lib.rs
storyteller-ml/src/event_templates/: mod.rs  validation.rs  vocabulary.rs
storyteller-ml/src/matrix/: CLAUDE.md  archetypes.rs  combinator.rs  descriptors.rs  export.rs  mod.rs  validation.rs
tools/doc-tools/: pyproject.toml
tools/name-harvester/: pyproject.toml
tools/name-harvester/tests/: test_harvester.py
tools/narrative-data/: pyproject.toml  run-batches.sh  run-discovery-extract.sh  run-discovery-synthesize.sh  run-genre-native.sh
tools/narrative-data/json-schemas/: genre-dimensions.schema.json
tools/narrative-data/prompts/: _commentary.md
tools/narrative-data/scripts/: run-dynamics-patch-fill.sh  run-ontological-posture-patch-fill.sh  run-spatial-topology-patch-fill.sh  run-structure-p1.sh  run-structure-p2.sh  run-structure-p3.sh  run-structure-p4.sh
tools/narrative-data/tests/: conftest.py  test_aggregator.py  test_cli.py  test_cli_structure.py  test_commands.py  test_config.py  test_dimension_extraction.py  test_discovery.py  test_events.py  test_invalidation.py  test_llm_patch.py  test_loader.py  test_ollama.py  test_pipeline.py  test_postprocess.py  test_primitive.py  test_prompts.py  test_prompts_structure.py  test_schemas.py  test_schemas_genre_dimensions.py  test_schemas_shared.py  test_schemas_types.py  test_slicer.py  test_structure_commands.py  test_sv_normalization.py
tools/narrative-data/viz/: index.html
tools/training/: pyproject.toml
tools/training/tests/: conftest.py  test_dataset.py  test_export.py  test_feature_schema.py  test_goal_lexicon.py  test_losses.py  test_model.py
training/: pyproject.toml
training/event_classifier/: pyproject.toml
training/event_classifier/tests/: test_dataset.py  test_export.py  test_metrics.py  test_schema.py
training/src/training/: __init__.py  cli.py  feature_schema.py  train.py
training/tests/: conftest.py  test_feature_schema.py
(+673 files in other folders)
