[package]
name = "storyteller-core"
version = "0.1.0"
edition = "2021"
description = "Foundation types, traits, errors, database, and graph operations for the storyteller engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/tasker-systems/storyteller"
keywords = ["storytelling", "narrative", "types"]
categories = ["game-engines"]

[dependencies]
# Types and serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }

# Configuration
toml = { workspace = true }
regex = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
