[package]
name = "storyteller-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary and server entry points for the storyteller engine"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/tasker-systems/storyteller"
keywords = ["storytelling", "narrative", "cli"]
categories = ["game-engines"]

[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
