[package]
name = "storyteller-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "CLI binary and server entry points for the storyteller engine"
readme = "../README.md"
repository = "https://github.com/tasker-systems/storyteller"
keywords = ["storytelling", "narrative", "cli"]
categories = ["game-engines"]

[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
storyteller-client = { path = "../storyteller-client", version = "=0.1.0" }
storyteller-core = { path = "../storyteller-core", version = "=0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
