[package]
name = "storyteller-composer"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Scene composition and descriptor catalog for the storyteller engine"
readme = "../README.md"
repository = "https://github.com/tasker-systems/storyteller"
keywords = ["storytelling", "narrative", "composition"]
categories = ["game-engines"]

[dependencies]
storyteller-core = { path = "../storyteller-core", version = "=0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
