[package]
name = "storyteller"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Multi-agent storytelling engine — narrative gravity, character tensors, and collaborative world-building"
readme = "../../README.md"
repository = "https://github.com/tasker-systems/storyteller"
keywords = ["storytelling", "narrative", "agents", "bevy", "ecs"]
categories = ["game-engines", "simulation"]

[features]
test-ml-model = ["storyteller-engine/test-ml-model"]
test-llm = ["storyteller-engine/test-llm"]

[lib]
crate-type = ["rlib"]
name = "storyteller"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
storyteller-core = { path = "../storyteller-core" }
storyteller-engine = { path = "../storyteller-engine" }
storyteller-server = { path = "../storyteller-server" }
tokio = { workspace = true }

[lints]
workspace = true
