[project]
name = "doc-tools"
version = "0.1.0"
description = "Document extraction utilities for converting writing documents to structured markdown"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

# uv dependency groups for native uv sync --dev support
[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
extract-scrivener = "doc_tools.scrivener.extractor:main"
convert-docx = "doc_tools.docx_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
