[project]
name = "narrative-data"
version = "0.1.0"
description = "Narrative data elicitation tooling for storyteller genre, spatial, and cross-domain research"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "uuid-utils>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
narrative-data = "narrative_data.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_data"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
