[project]
name = "storyteller-training"
version = "0.1.0"
description = "Character prediction model training for the storyteller engine"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

# uv dependency groups for native uv sync --dev support
[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
train-character-model = "training.cli:main"
enrich-goals = "goal_lexicon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training", "src/goal_lexicon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
